TODOs are needed

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -77,7 +77,7 @@ linters:
     - whitespace
     - asciicheck
     - gocognit
-    - godox
+      # - godox TODOs are needed
     - nestif
     - prealloc
 issues:
