--- a/.golangci.yml
+++ b/.golangci.yml
@@ -38,12 +38,10 @@ linters-settings:
   golint:
     min-confidence: 0
   gomnd:
-    settings:
-      mnd:
-        # don't include the "operation" and "assign"
-        checks: argument,case,condition,return
+    # don't include the "operation" and "assign"
+    checks: argument,case,condition,return
   govet:
-    check-shadowing: true
+    shadow: true
   lll:
     line-length: 160
   maligned:
